scoring_engine/vms.tf
resource "google_compute_instance" "engine" {
  name         = "engine"
  machine_type = "n1-standard-4"
  zone         = "us-east1-b"

  boot_disk {
    initialize_params {
      image = "engine"
      size  = 10
    }
  }

  network_interface {
    subnetwork = google_compute_subnetwork.scoring.name

    access_config {
      // Ephemeral IP
    }
  }

  depends_on = ["null_resource.template"]
}
